# rust-playground

./: .gitignore  Cargo.toml
examples/: gen_faker.rs  gen_fig_font.rs  guessing_game.rs  serde_yaml_csv_json_toml.rs
src/: backup.rs  faker-generation.rs  main.rs  test.json
