[package]
name = "rust-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
csv = "1.3.1"
rayon = "1.10.0"
text-to-ascii-art = "0.1.5"
fake = { version = "4", features = ["derive", "uuid", "time"] }
figlet-rs = "0.1.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "2.0.12"
toml = "0.8.20"                                            # Enable serde support
